feat:added token verification
